--- a/app/assets/stylesheets/public/sidenav.scss
+++ b/app/assets/stylesheets/public/sidenav.scss
@@ -1,4 +1,4 @@
-.left-side {
+.sidenav {
 
   &__sticky {
     position: sticky;
@@ -62,7 +62,7 @@
 }
 
 @media screen and (max-width:1125px) {
-  .left-side {
+  .sidenav {
 
     // sidenavリンクbox
     &__link {
